# RIO

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake_linux.yml
cmake/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
lib/: assimp-vc142-mt.lib
runtime/assets/models/Robot/: Robot.gltf
runtime/assets/models/camera/: camera.gltf
runtime/assets/models/chess/: chess.gltf
runtime/assets/models/ferrari/: ferrari.gltf  license.txt
runtime/assets/models/folding_table/: folding_table.gltf  license.txt
runtime/assets/models/lion/: lion.mtl
runtime/assets/models/room/: Room.mtl
runtime/assets/scenes/: default-scene.json  helmet.json  lion.json  shadow-scene.json
runtime/scenes/: aa-scene.json  bedroom.json  shadow-scene.json
runtime/shaders/: shader.frag  shader.vert
runtime/shaders/common/: material.glsl  parameter.glsl
runtime/shaders/model/: blinn-phong.glsl  brdf.glsl
runtime/shaders/pass/: blend_weight_calculation.frag  blend_weight_calculation.vert  compute_SAT.comp  edge_detection.frag  edge_detection.vert  fxaa.frag  fxaa.vert  grading.frag  ibl.frag  ibl.vert  ibl_irradiance.frag  ibl_precomputed_brdf.frag  ibl_precomputed_brdf.vert  ibl_prefiltered_map.frag  ibl_prefiltered_map.vert  light.frag  neighborhood_blending.frag  neighborhood_blending.vert  rect_to_cube.frag  rect_to_cube.vert  shade.frag  shade.vert  shadow.frag  shadow.vert  skybox.frag  taa.frag
runtime/shaders/post/: fxaa.glsl  smaa.glsl  taa.glsl
runtime/shaders/shadow/: pcss.glsl  vssm.glsl
runtime/shaders/util/: evaluate.glsl  light.glsl  marcos.glsl  math.glsl  shadow.glsl
shaders/: shader.frag  shader.vert
src/: camera.cpp  camera.hpp  filesystem.cpp  filesystem.hpp  main.cpp  mesh.cpp  mesh.h  mesh.hpp  model.cpp  model.h  model.hpp  renderer.cpp  renderer.hpp  shader.hpp
src/io/: filesystem.cpp  filesystem.hpp  loader.cpp  loader.hpp  panel.cpp  panel.hpp  window.cpp  window.hpp
src/pass/: pass_compute_SAT.cpp  pass_compute_SAT.hpp  pass_ibl_irradiance.cpp  pass_ibl_irradiance.hpp  pass_ibl_precomputed_brdf.hpp  pass_ibl_prefiltered_map.cpp  pass_ibl_prefiltered_map.hpp  pass_light.cpp  pass_present.cpp  pass_present.hpp  pass_rect_to_cube.cpp  pass_rect_to_cube.hpp  pass_shade.cpp  pass_shade.hpp  pass_shadow.cpp  pass_shadow.hpp  pass_skybox.cpp  pass_skybox.hpp
src/pass/ibl/: pass_ibl.cpp  pass_ibl.hpp  pass_ibl_irradiance.cpp  pass_ibl_precomputed_brdf.cpp  pass_ibl_prefiltered_map.hpp  pass_rect_to_cube.cpp
src/pass/post/: pass_blend_weight_calculation.cpp  pass_blend_weight_calculation.hpp  pass_edge_detection.cpp  pass_edge_detection.hpp  pass_fxaa.cpp  pass_fxaa.hpp  pass_grading.cpp  pass_grading.hpp  pass_neighborhood_blending.cpp  pass_neighborhood_blending.hpp  pass_post_process.cpp  pass_post_process.hpp  pass_smaa.cpp  pass_smaa.hpp  pass_taa.cpp  pass_taa.hpp
src/pass/shade/: pass_light.cpp  pass_light.hpp  pass_shade.cpp  pass_shade.hpp  pass_skybox.cpp  pass_skybox.hpp
src/pass/shadow/: pass_compute_SAT.hpp  pass_shadow.cpp  pass_shadow.hpp
src/platform/: api-function.cpp  api-function.hpp  frame-buffer.cpp  frame-buffer.hpp  index-buffer.cpp  index-buffer.hpp  render-buffer.cpp  render-buffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  time-query.cpp  time-query.hpp  vertex-array.cpp  vertex-array.hpp  vertex-attribute.cpp  vertex-attribute.hpp  vertex-buffer.cpp  vertex-buffer.hpp
src/render/: config.hpp  pass.cpp  pass.hpp  renderer.cpp  renderer.hpp  shader-prep.hpp  shader.cpp  shader.hpp
src/scene/: camera.cpp  camera.hpp  config.hpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  panel.cpp  panel.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp
